# nxdbg_u

./: .gitignore  CMakeLists.txt  README.MD  make_debug.sh
debugger/: ExpressionEval.py  MainWindow.py  RemoteConnection.py  RemoteConnectionTest.py  RemoteConnectionUsb.py  Utils.py
service/: .gitignore  CMakeLists.txt  Makefile  nxdbg.json  service.kip
service/service/: Makefile
service/source/: commands.h  initUsb.cpp  main.c  main.cpp  usbHandler.cpp  usbResponse.cpp  variable.hpp
